src/styles/style.css
/* ... */
#FAQ h3 {
	font-weight: bold;
	margin: 1em;
	font-size: 2em;
	font-family: monospace;
	letter-spacing: 1px;
	color: rgb(166, 199, 213);
}

#faq-questions {
	width: 75%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: left;
	align-items: center;
	max-width: 100em;
}

#faq-questions > p {
	margin: 1em;
	border-bottom: 1px solid #a6c7d5;
	padding-bottom: 3em;
}


#ack {
	background: #a6c7d5b8;
	color: black;
	padding: 2em;
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-items: center;
	border-top: 1px solid blueviolet;
	border-bottom: 1px solid black;
}


#ack h1 {
    color: black;
    padding: 1em;
}


#ack-content {
	width: 75%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: left;
	align-items: center;
	max-width: 100em;
}

.acknowledgement-row {
	display: flex;
	justify-content: space-between;
	width: 100%;
	margin: 2em;
	align-items: center;
	border-bottom: 1px solid #0000003d;
	padding-bottom: 2em;
}


.acknowledgement-row h3 {
	width: 25%;
	font-weight: bold;
	font-family: monospace;
	font-size: 1em;
	letter-spacing: 2px;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
}

.acknowledgement-row p {
	width: 65%;
	font-size: 14px;
	text-align: right;
	border-right: 1px solid #8a2be245;
	padding-right: 2em;
}

#countdown {
    color: rgb(5, 4, 4);
    font-family: "Bungee Shade", monospace;
    font-size: 2em;
    font-weight: bold;
    text-align: center;
    margin-bottom: 0;
}

#countdown-container {
    display: flex;
    align-items: center;
    flex-direction: column;
}

#ensembleList {
    color: #d9d8d8;
}

#left-side {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 30%;
}

h1 {
    text-decoration: none;
    color: rgb(166, 199, 213);
    font-family: "Bungee Shade", monospace;
    font-size: 40px;
}

h2, h3, h4 {
    font-family: "Bungee Shade", monospace;
}

.logo-hyperlink {
    text-decoration: none;
    color: #d9d8d8;
    font-family: "Bungee Shade", monospace;
    font-size: 50px;
    letter-spacing: 5px;
}

.logo-hyperlink :hover {
    font-size: 60px;
    transition: 0.5s;
    color: rgb(231, 231, 231);
    text-shadow: 0 0 1px rgb(152, 40, 171), 0 0 20px rgb(49, 19, 50),
    0 0 40px rgb(75, 17, 77), 0 0 80px rgb(45, 16, 38),
    0 0 120px rgb(209, 66, 166);
}

.logo-hyperlink2 {
    text-decoration: none;
    color: #d9d8d8;
    font-family: "Bungee Shade", monospace;
    font-size: 25px;
    letter-spacing: 5px;
}


main {
    display: block;
    justify-content: space-around;
    align-items: center;
    padding-top: 1em;
    flex-direction: column-reverse;
}

.info {
    width: 95%;
    color: #e4e4e4;
    margin-top: 2em;
    font-family: monospace;
}

.album-overview {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: 1em;
    margin-bottom: 1em;
    flex-wrap: nowrap;
}

#next-booklet-page {
    width: 25px;
    height: 25px;
    padding: 3px;
    background-color: #000000b2;
    margin-left: -12px;
    color: #d3d8da;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 30%;
    border: 1px solid black;
    margin-right: -12px;
}

#next-booklet-page:hover {
    background-color: #000000b2;
    color: #d3d8da;
    transition: 0.5s;
    cursor: pointer;
}


#contract-status {
    padding: 0em;
    font-family: "Bungee Shade", monospace;
    font-weight: bold;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: row-reverse;
    max-width: 70em;
    flex-wrap: wrap;
}

#fundingStatus {
    font-family: "Bungee Shade", monospace;
    font-size: 2em;
    display: flex;
    justify-content: center;
    align-items: center;
    color: black;
    font-weight: bold;
    flex-direction: column;
    margin: 1em;
    border-top: 1px solid #212529;
    padding-top: 0.5em;
    border-bottom: 1px solid #212529;
    padding-bottom: 0.5em;
}

#funding-label {
    font-size: 16px;
    color: #212529;
    margin-top: 0;
}

#countdown-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    border-top: 1px solid #212529;
    padding-top: 1em;
    border-bottom: 1px solid #212529;
    padding-bottom: 1em;
}

#how-does-this-work {
    text-align: center;
    font-family: monospace;
    color: #e4e4e4;
    margin-top: 0em;
    font-size: 19px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    background: #000000b2;
    padding: 4em 15%;
    border-top: 2px solid blueviolet;
}

#how-does-this-work > h2 {
    color: #d9d8d8;
    font-weight: bold;
    margin-bottom: 1em;
    margin-top: -55px;
    padding: 0em 15%;
}

#how-does-this-work > p {
	color: #d9d8d8;
	width: 90%;
	margin-bottom: 4em;
	max-width: 100em;
}

#how-does-this-work > span {
    color: #d9d8d8;
    font-weight: bold;
}

#contribution-container {

}

#contribute-button {
    cursor: pointer;
    background-color: blueviolet;
}

#preset-bids {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 4px 2px;
    border-radius: 15px;
    border: 1px solid transparent;
}

#preset-bids span:hover {
    background-color: black;
    transition: 0.5s;
}

#preset-bids span {
    color: #d9d8d8;
    background-color: blueviolet;
    width: 100%;
    border-radius: 5px;
    text-align: center;
    padding: 0.5em;
    font-size: 15px;
    font-weight: bold;
    font-family: monospace;
}

#combine-contribution-div {
    color: #d9d8d8;
    background-color: transparent;
    border-radius: 5px;
    display: none;
}

#combine-contribution-div label {
    font-size: 10px;
    font-family: monospace;
    font-weight: bold;

}
/* ... */

